Prevent "Jen & Brett" from wrapping on small screens.

--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -163,6 +163,12 @@ h1 > span:after {
   color: #090D16;
 }
 
+@media screen and (max-width:380px) {
+  #names {
+    font-size: 300%;
+  }
+}
+
 @media screen and (max-width:600px) {
   body {
     padding: 15px 10px;
